# secrets

./: .gitignore  .merlin  .secrets.ml.swp  Logo.afdesign  Makefile  README.md  build.sh  channels.scm  cli  cli.ml  cli_find.ml  common.h  crypto.ml  crypto.mli  crypto_intf.ml  dune  dune-project  entry.ml  guix-channels.scm  guix-manifest.scm  hello-world.afdesign  jbuild  key.ml  lexer.mll  libsodium.ml  nacl.ml  nacl.mli  nacl_stubs.c  ok  package  package.scm  parser.mly  parser_runner.ml  requirements.sh  run  secret.mll  secret.mly  secrets.ml  secrets.mli  secrets.opam  (+9 more)
cassowary/: amoeba.c  cassowary.ml  jbuild
nacl/: dune
patch/: jbuild  patch.ml  patch_stubs.c
scripts/: Makefile  pack.sh
termbox/: dune
termbox/termbox_c/: dune  dune-ignore  dune~
termbox_c/libtermbox/DESTDIR/usr/lib64/: libtermbox.so.1.0.0
yoga/: jbuild  jbuild-ignore  yoga.ml
