(library
 (name termbox_c)
 (install_c_headers termbox)
 (self_build_stubs_archive (termbox_c)))

(rule
 (targets libtermbox_c_stubs.a dlltermbox_c_stubs.so termbox.h)
 (deps (source_tree libtermbox))
 (action
   (chdir libtermbox (progn
     (system "./waf configure")
     (system "./waf")
     (system "cp build/src/libtermbox.a ../libtermbox_c_stubs.a")
     (system "cp build/src/libtermbox.so ../dlltermbox_c_stubs.so")
     (system "cp src/termbox.h ../termbox.h")))))
 